@@ -171,9 +171,11 @@
 <hr width="100%">
 <h1><a name="4"></a>4. Running</h1>
 <h2><a name="4.1"></a>4.1. How do I open a file with a name beginning with '+' from the command line?</h2>
-<blockquote><p>If a command line option that begins with '+' is followed by another option, the former is always treated as a starting line number and the latter is always treated as a filename. If a command line option that begins with '+' isn't followed by another option, it's always treated as a filename. Examples:</p>
+<blockquote><p>If a command line option that begins with '+' is followed by another option, the former is always treated as a starting line and column number and the latter is always treated as a filename. If a command line option that begins with '+' isn't followed by another option, it's always treated as a filename. Examples:</p>
   <p>To open '+filename.txt' starting on line 1: <b>nano +filename.txt</b><br>
   To open '+filename.txt' starting on line 10: <b>nano +10 +filename.txt</b><br>
+  To open '+filename.txt' starting on line 1, column 20: <b>nano +,20 +filename.txt</b><br>
+  To open '+filename.txt' starting on line 10, column 20: <b>nano +10,20 +filename.txt</b><br>
   To open '+filename.txt' starting on line 1 and 'filename.txt' starting on line 10 (if nano has been compiled with multibuffer support): <b>nano +1 +filename.txt +20 filename.txt</b></p></blockquote>
 <h2><a name="4.2"></a>4.2. Ack! My Backspace/Delete/Enter/Meta/double bucky key doesn't seem to work! What can I do?</h2>
 <blockquote><p>Try setting your $TERM variable to 'vt100'. nano doesn't yet support every term entry under the sun.</p>
@@ -254,7 +256,8 @@
 <h2><a name="7.5"></a>7.5. Can I have CVS write access?</h2>
 <blockquote><p>Re-read Section <a href="#7.4">7.4</a> and you should know the answer.</p></blockquote>
 <h2><a name="8"></a>8. ChangeLog</h2>
-<blockquote><p>2006/11/25 - Add miscellaneous wording and capitalization fixes. (DLR)<br>
+<blockquote><p>2007/01/01 - Update section 4.1 to describe how to open files with names beginning with '+' at specified columns as well as lines. (DLR)<br>
+2006/11/25 - Add miscellaneous wording and capitalization fixes. (DLR)<br>
 2006/10/28 - Update various links for the 2.0 branch of nano. (DLR)<br>
 2006/10/06 - Update the question in section 4.13 to match the version of it in the answer section. (DLR)<br>
 2006/07/25 - Update section 5.3 again to not state &quot;the latest development version&quot; before 1.3.12, as it's no longer accurate. Also add some minor spacing fixes. (DLR)<br>
